--- a/scss/style.scss
+++ b/scss/style.scss
@@ -436,7 +436,7 @@ input:not([type=submit]), textarea {
   #header-new {
     min-height: 550px;
     .hero {
-      background: url('../images/header.png') no-repeat 0 0 !important;
+      background: url('../images/header.jpg') no-repeat 0 0 !important;
       -webkit-background-size: cover!important;
       -moz-background-size: cover!important;
       -o-background-size: cover!important;
