--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1914,7 +1914,7 @@ input:not([type=submit]), textarea {
   .index-launch #header-new {
     min-height: 550px; }
     .index-launch #header-new .hero {
-      background: url('../images/header.png') no-repeat 0 0 !important;
+      background: url('../images/header.jpg') no-repeat 0 0 !important;
       -webkit-background-size: cover !important;
       -moz-background-size: cover !important;
       -o-background-size: cover !important;
