remove call-for-speakers & speaker vote

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1665,41 +1665,41 @@ input:not([type=submit]), textarea {
       #footer .wrapper .right {
         float: right; } }
 
-/* Call For Speakers */
-.call-for-speakers #header .menu a:hover, .code-of-conduct #header .menu a:hover {
+/* code-of-conduct */
+.code-of-conduct #header .menu a:hover {
   color: #5399fc;
   border-color: #5399fc; }
-.call-for-speakers #header .hero, .code-of-conduct #header .hero {
+.code-of-conduct #header .hero {
   background: #fff;
   color: #5399fc; }
-  .call-for-speakers #header .hero .wrapper, .code-of-conduct #header .hero .wrapper {
+  .code-of-conduct #header .hero .wrapper {
     height: 100%;
     position: relative; }
-    .call-for-speakers #header .hero .wrapper .logo, .call-for-speakers #header .hero .wrapper .title, .code-of-conduct #header .hero .wrapper .logo, .code-of-conduct #header .hero .wrapper .title {
+    .code-of-conduct #header .hero .wrapper .logo, .code-of-conduct #header .hero .wrapper .title {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
       width: 50%;
       padding-right: 0px !important;
       padding-left: 0px !important; }
-      .call-for-speakers #header .hero .wrapper .logo:nth-child(even), .call-for-speakers #header .hero .wrapper .title:nth-child(even), .code-of-conduct #header .hero .wrapper .logo:nth-child(even), .code-of-conduct #header .hero .wrapper .title:nth-child(even) {
+      .code-of-conduct #header .hero .wrapper .logo:nth-child(even), .code-of-conduct #header .hero .wrapper .title:nth-child(even) {
         float: right;
         padding: 70px 0 0 40px; }
-      .call-for-speakers #header .hero .wrapper .logo:nth-child(odd), .call-for-speakers #header .hero .wrapper .title:nth-child(odd), .code-of-conduct #header .hero .wrapper .logo:nth-child(odd), .code-of-conduct #header .hero .wrapper .title:nth-child(odd) {
+      .code-of-conduct #header .hero .wrapper .logo:nth-child(odd), .code-of-conduct #header .hero .wrapper .title:nth-child(odd) {
         float: left;
         padding-right: 40px; }
       @media only screen and (max-width: 768px) {
-        .call-for-speakers #header .hero .wrapper .logo, .call-for-speakers #header .hero .wrapper .title, .code-of-conduct #header .hero .wrapper .logo, .code-of-conduct #header .hero .wrapper .title {
+        .code-of-conduct #header .hero .wrapper .logo, .code-of-conduct #header .hero .wrapper .title {
           width: 100%;
           margin: 0px 0px 20px 0px;
           padding: 0px !important; } }
-    .call-for-speakers #header .hero .wrapper .logo, .code-of-conduct #header .hero .wrapper .logo {
+    .code-of-conduct #header .hero .wrapper .logo {
       left: 0px;
       margin-top: -230px;
       position: absolute;
       top: 50%;
       z-index: 1; }
-      .call-for-speakers #header .hero .wrapper .logo:before, .code-of-conduct #header .hero .wrapper .logo:before {
+      .code-of-conduct #header .hero .wrapper .logo:before {
         font-family: 'icons';
         font-variant: normal;
         font-weight: normal;
@@ -1713,11 +1713,11 @@ input:not([type=submit]), textarea {
         line-height: 300px;
         margin-bottom: 10px; }
         @media only screen and (max-width: 768px) {
-          .call-for-speakers #header .hero .wrapper .logo:before, .code-of-conduct #header .hero .wrapper .logo:before {
+          .code-of-conduct #header .hero .wrapper .logo:before {
             font-size: 100px;
             font-size: 10rem;
             line-height: 100px; } }
-    .call-for-speakers #header .hero .wrapper .title, .code-of-conduct #header .hero .wrapper .title {
+    .code-of-conduct #header .hero .wrapper .title {
       height: 260px;
       position: absolute;
       padding-top: 0px;
@@ -1726,22 +1726,22 @@ input:not([type=submit]), textarea {
       top: 50%;
       text-align: left; }
       @media only screen and (max-width: 768px) {
-        .call-for-speakers #header .hero .wrapper .title, .code-of-conduct #header .hero .wrapper .title {
+        .code-of-conduct #header .hero .wrapper .title {
           padding-top: 130px !important; }
-          .call-for-speakers #header .hero .wrapper .title h1, .call-for-speakers #header .hero .wrapper .title p, .code-of-conduct #header .hero .wrapper .title h1, .code-of-conduct #header .hero .wrapper .title p {
+          .code-of-conduct #header .hero .wrapper .title h1, .code-of-conduct #header .hero .wrapper .title p {
             text-align: center; } }
-      .call-for-speakers #header .hero .wrapper .title:nth-child(even), .code-of-conduct #header .hero .wrapper .title:nth-child(even) {
+      .code-of-conduct #header .hero .wrapper .title:nth-child(even) {
         padding-top: 50px; }
-      .call-for-speakers #header .hero .wrapper .title h1, .code-of-conduct #header .hero .wrapper .title h1 {
+      .code-of-conduct #header .hero .wrapper .title h1 {
         line-height: 100%; }
-        .call-for-speakers #header .hero .wrapper .title h1:before, .code-of-conduct #header .hero .wrapper .title h1:before {
+        .code-of-conduct #header .hero .wrapper .title h1:before {
           content: ''; }
-      .call-for-speakers #header .hero .wrapper .title h2, .code-of-conduct #header .hero .wrapper .title h2 {
+      .code-of-conduct #header .hero .wrapper .title h2 {
         color: #5399fc; }
-      .call-for-speakers #header .hero .wrapper .title p, .code-of-conduct #header .hero .wrapper .title p {
+      .code-of-conduct #header .hero .wrapper .title p {
         color: #5399fc;
         padding: 15px 0; }
-      .call-for-speakers #header .hero .wrapper .title .arrow.register, .code-of-conduct #header .hero .wrapper .title .arrow.register {
+      .code-of-conduct #header .hero .wrapper .title .arrow.register {
         background: #5399fc;
         border-radius: 5px;
         color: #fff;
@@ -1754,37 +1754,37 @@ input:not([type=submit]), textarea {
         font-size: 16px;
         font-size: 1.6rem; }
         @media only screen and (max-width: 768px) {
-          .call-for-speakers #header .hero .wrapper .title .arrow.register, .code-of-conduct #header .hero .wrapper .title .arrow.register {
+          .code-of-conduct #header .hero .wrapper .title .arrow.register {
             margin: 50px auto 0px auto; } }
-.call-for-speakers #content, .code-of-conduct #content {
+.code-of-conduct #content {
   background: #5399fc;
   padding: 60px 0; }
-  .call-for-speakers #content .wrapper, .code-of-conduct #content .wrapper {
+  .code-of-conduct #content .wrapper {
     color: #fff;
     padding: 0 20px;
     max-width: 700px; }
-    .call-for-speakers #content .wrapper p, .code-of-conduct #content .wrapper p {
+    .code-of-conduct #content .wrapper p {
       line-height: 200%;
       margin-bottom: 60px; }
-    .call-for-speakers #content .wrapper h2, .call-for-speakers #content .wrapper h4, .call-for-speakers #content .wrapper h3, .code-of-conduct #content .wrapper h2, .code-of-conduct #content .wrapper h4, .code-of-conduct #content .wrapper h3 {
+    .code-of-conduct #content .wrapper h2, .code-of-conduct #content .wrapper h4, .code-of-conduct #content .wrapper h3 {
       color: #fff;
       font-weight: normal;
       margin-bottom: 40px; }
-    .call-for-speakers #content .wrapper h3, .code-of-conduct #content .wrapper h3 {
+    .code-of-conduct #content .wrapper h3 {
       font-size: 32px;
       font-size: 3.2rem;
       border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
-    .call-for-speakers #content .wrapper h4, .code-of-conduct #content .wrapper h4 {
+    .code-of-conduct #content .wrapper h4 {
       font-size: 20px;
       font-size: 2rem;
       margin-bottom: 10px; }
-    .call-for-speakers #content .wrapper a, .code-of-conduct #content .wrapper a {
+    .code-of-conduct #content .wrapper a {
       color: #fff;
       opacity: 0.6; }
-      .call-for-speakers #content .wrapper a:hover, .code-of-conduct #content .wrapper a:hover {
+      .code-of-conduct #content .wrapper a:hover {
         opacity: 0.7; }
 @media only screen and (max-width: 768px) {
-  .call-for-speakers #register, .code-of-conduct #register {
+  .code-of-conduct #register {
     padding: 0 30px; } }
 
 /* Social */
@@ -2489,6 +2489,20 @@ input:not([type=submit]), textarea {
       margin: 0 auto; }
     .index-launch .section.speakers p {
       margin-top: 10px; }
+    .index-launch .section.speakers .title {
+      padding-bottom: 0; }
+    .index-launch .section.speakers .tip {
+      color: #4d4d4d;
+      font-size: 24px;
+      font-size: 2.4rem;
+      height: 50px;
+      line-height: 50px;
+      letter-spacing: 5px;
+      top: 50%;
+      text-align: center;
+      text-transform: uppercase;
+      width: 100%;
+      z-index: 1; }
     .index-launch .section.speakers ul {
       padding: 0px;
       margin: 0px; }
@@ -2687,8 +2701,8 @@ input:not([type=submit]), textarea {
       margin-bottom: 140px; }
       .index-launch .section.venue .tip {
         color: #4d4d4d;
-        font-size: 28px;
-        font-size: 2.8rem;
+        font-size: 24px;
+        font-size: 2.4rem;
         height: 50px;
         line-height: 50px;
         letter-spacing: 5px;
