--- a/templates/index.html
+++ b/templates/index.html
@@ -58,12 +58,157 @@
     </div>
   </section>
   <!-- Speakers -->
-  <section class='section speakers' id='item2'>
+    <section class='section speakers' id='item2'>
     <div class='title'>
       <h1>{{ menu.item2 }}</h1>
     </div>
-    <a href='https://jinshuju.net/f/Dfys92' target='new' class='button'>{{ speakers.vote.button }}</a>
-    <p>{{ speakers.vote.content }}</p>
+      <div class='tip'>{{ button.placeholder }}</div>
+<!--     <ul>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon weibo'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon weibo'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>{{ speakers.speaker1.name }}</h4>
+            <p>{{ speakers.speaker1.title }}</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+    </ul> -->
   </section>
 
   <!-- Banner -->
